dfir_rs/tests/compile-fail-stable/surface_fold_keyed_generics_extra.rs
../compile-fail/surface_fold_keyed_generics_extra.rs